<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.yubzhou</groupId>
    <artifactId>data-detectives</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>data-detectives</name>
    <description>data-detectives</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <lombok.version>1.18.36</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>
    <dependencies>
        <!--Spring Boot Starter Web依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!--Spring Boot Starter Redis依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId> <!-- 连接池 -->
        </dependency>

        <!-- spring kafka 依赖 -->
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- 引入 aop 支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>

        <!--
            生成完spring-configuration-metadata.json文件后，
            到target/classes/META-INF/目录下将json文件
            拷贝到项目的src/main/resources/META-INF/。
            然后将该依赖注释掉即可（即该注释只要用一次即可）
        -->
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-configuration-processor</artifactId>-->
        <!--    <optional>true</optional>-->
        <!--</dependency>-->

        <!--&lt;!&ndash;该依赖用于整合devtools，可以热加载（即修改代码后不需要手动重启服务器）&ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-devtools</artifactId>-->
        <!--    <scope>runtime</scope>-->
        <!--    <optional>true</optional> &lt;!&ndash;表示该依赖不是必须的（即该依赖不会传递给引用该项目的其他项目）&ndash;&gt;-->
        <!--</dependency>-->

        <!--&lt;!&ndash;该依赖用于整合actuator，可以查看应用的运行状态、健康检查、环境信息等&ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>org.springframework.boot</groupId>-->
        <!--    <artifactId>spring-boot-starter-actuator</artifactId>-->
        <!--</dependency>-->

        <!--该依赖用于SpringBoot3整合MyBatis-Plus（包含mybatis整合springboot依赖）-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>
        <!--该依赖用于整合mybatis-plus-jsqlparser，用于支持mybatis-plus的分页查询-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-jsqlparser</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>

        <!--springboot3整合druid数据源-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-3-starter</artifactId>
            <version>1.2.24</version>
        </dependency>

        <!--&lt;!&ndash;该依赖用于整合MyBatis，已经包含spring-boot-starter-jdbc依赖，而spring-boot-starter-jdbc依赖已经包含HikariCP连接池&ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>org.mybatis.spring.boot</groupId>-->
        <!--    <artifactId>mybatis-spring-boot-starter</artifactId>-->
        <!--    <version>3.0.4</version>-->
        <!--</dependency>-->
        <!--&lt;!&ndash;该依赖用于整合PageHelper&ndash;&gt;-->
        <!--<dependency>-->
        <!--    <groupId>com.github.pagehelper</groupId>-->
        <!--    <artifactId>pagehelper-spring-boot-starter</artifactId>-->
        <!--    <version>2.1.0</version>-->
        <!--</dependency>-->

        <!--该依赖用于整合MySQL-->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!--该依赖用于整合Lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <!--必须要指定版本号，要不然会报错-->
            <version>${lombok.version}</version>
        </dependency>

        <!--该依赖用于整合单元测试-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!--该依赖用于整合Validation-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!--该依赖用于整合JWT-->
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>4.4.0</version>
        </dependency>

        <!--该依赖用于整合Jasypt加密（用于加密配置文件中的敏感信息）-->
        <dependency>
            <groupId>com.github.ulisesbocchio</groupId>
            <artifactId>jasypt-spring-boot-starter</artifactId>
            <version>3.0.5</version>
        </dependency>

        <!--该依赖用于整合 Spring Security 提供的 BCrypt 实现（用于密码加密）-->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>

        <!-- MapStruct核心库 -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>

        <!-- 阿里云短信依赖 -->
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>dysmsapi20170525</artifactId>
            <version>3.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>tea-openapi</artifactId>
            <version>0.3.6</version>
        </dependency>

        <!-- 用于获取文件类型 -->
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- 分词组件 -->
        <dependency>
            <groupId>com.hankcs</groupId>
            <artifactId>hanlp</artifactId>
            <version>portable-1.8.6</version>
        </dependency>
    </dependencies>

    <build>
        <!--
            指定package打包后生成的jar包文件名称为${project.artifactId}
            即如果项目artifactId为data-detectives，则生成的jar包文件名称：data-detectives.jar
            package打包后可以在target目录下找到该jar包文件
        -->
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <!--Lombok注解处理器-->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <!--必须要指定版本号，要不然会报错-->
                            <version>${lombok.version}</version>
                        </path>
                        <!--MapStruct注解处理器-->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
